@@ -41,6 +41,7 @@
 \*****************************************************************************/
 
 #include <signal.h>
+#include "src/common/slurm_xlator.h"
 #include "src/common/jobacct_common.h"
 #include "src/common/slurm_protocol_api.h"
 #include "src/common/slurm_protocol_defs.h"
