@@ -414,6 +414,10 @@ documents those changes that are of interest to users and admins.
  -- Do not make a non-responding node available for use after running
     "scontrol update nodename=<name> state=resume". Wait for node to respond
     before use.
+ -- Added slurm_xlator.h to jobacct_gather plugins so they resolve symbols
+    correctly when linking to the slurm api.
+ -- You can now update a jobs QOS from scontrol.  Previously you could only do
+    this from sview.
 
 * Changes in SLURM 2.1.9
 ========================
